--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,16 +18,16 @@ website:
         menu:
           - href: install-editor.qmd
 
-      - text: "Python Primer"  
-        menu: 
-            - text: "Basics"
-              href: ./python_primer/basics.qmd
-            # - text: "Functions"
-            #   href: ./python_primer/functions.qmd
-            - text: "Constructs"
-              href: ./python_primer/constructs.qmd
-            - text: "Data types"
-              href: ./python_primer/data_types.qmd
+      # - text: "Python Primer"  
+      #   menu: 
+      #       - text: "Basics"
+      #         href: ./python_primer/basics.qmd
+      #       # - text: "Functions"
+      #       #   href: ./python_primer/functions.qmd
+      #       - text: "Constructs"
+      #         href: ./python_primer/constructs.qmd
+      #       - text: "Data types"
+      #         href: ./python_primer/data_types.qmd
             
           # - href:  ./python_primer/unt0/modules/module0.qmd
       - schedule.qmd
