--- a/_quarto.yml
+++ b/_quarto.yml
@@ -34,7 +34,7 @@ website:
       - text: "Notes"
         menu: 
           - href: Week0.qmd 
-          # - href: Week1.qmd
+          - href: Week1.qmd
       #     - href: Week2.qmd
       #     - href: Spring2023_MidtermProjects.qmd
       #     - href: Week3.qmd
