--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,7 +25,7 @@ website:
           - href: Week2.qmd
           - href: Week2-Mohammad-PrattWhitney-Lecture.qmd
       #     - href: Spring2023_MidtermProjects.qmd
-      #     - href: Week3.qmd
+          - href: Week3.qmd
       #     - href: Week3-Parmer-Lecture.qmd
       #     - href: Week4.qmd
       #     - href: Week4-Yanamadala-ARM-Lecture.qmd
