--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,8 +26,8 @@ website:
           - href: Week2-Mohammad-PrattWhitney-Lecture.qmd
       #     - href: Spring2023_MidtermProjects.qmd
           - href: Week3.qmd
-      #     - href: Week3-Parmer-Lecture.qmd
-      #     - href: Week4.qmd
+          - href: Week4.qmd
+          - href: Week4-JitishKolanjery-Google-Lecture.qmd
       #     - href: Week4-Yanamadala-ARM-Lecture.qmd
       #     - href: Week5.qmd
       #     - href: Week6.qmd          
