--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,13 +24,13 @@ website:
           - href: Week1.qmd
           - href: Week2.qmd
           - href: Week2-Mohammad-PrattWhitney-Lecture.qmd
-      #     - href: Spring2023_MidtermProjects.qmd
           - href: Week3.qmd
           - href: Week4.qmd
           - href: Week4-JitishKolanjery-Google-Lecture.qmd
           - href: Week5.qmd
           - href: Week6.qmd  
-      #     - href: Week4-Yanamadala-ARM-Lecture.qmd  
+          - href: Week6-ChowdaryYanamadala-ARM-Lecture.qmd  
+          - href: Midterm_Presentations_Spring2024.qmd
       #     - href: Week6-Nuzum-Innovyz-Lecture.qmd
       #     - href: Week9.qmd    
       #     - href: Week10.qmd    
