--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,6 +31,8 @@ website:
           - href: Week6.qmd  
           - href: Week6-ChowdaryYanamadala-ARM-Lecture.qmd  
           - href: Midterm_Presentations_Spring2024.qmd
+          - href: Week8.qmd  
+          - href: Week8-JakeWhitton-Demo-Lecture.qmd           
       #     - href: Week6-Nuzum-Innovyz-Lecture.qmd
       #     - href: Week9.qmd    
       #     - href: Week10.qmd    
