--- a/_quarto.yml
+++ b/_quarto.yml
@@ -36,11 +36,12 @@ website:
       #     - href: Week6-Nuzum-Innovyz-Lecture.qmd
           - href: Week9.qmd    
           - href: Week10.qmd    
-      #     - href: Week10-Pottier-ARM-Lecture.qmd   
-      #     - href: Week11.qmd    
+      #     - href: Week10-Rodley-SnapCore-Lecture.qmd            
+          - href: Week11.qmd    
+          - href: Week11-ThomasFarmer-UPenn-Lecture.qmd             
+      #   - href: Week10-Pottier-ARM-Lecture.qmd   
       #     - href: Week12.qmd  
       #     - href: Week13.qmd  
-      #     - href: Week13-Rodley-SnapCore-Lecture.qmd   
       #     - href: Week14-FinalProject_Gallery.qmd          
       # - text: "Python Primer"  
       #   menu: 
