--- a/_quarto.yml
+++ b/_quarto.yml
@@ -42,7 +42,7 @@ website:
       #   - href: Week10-Pottier-ARM-Lecture.qmd   
           - href: Week12.qmd  
           - href: Week12-AnuragBhatnagar-ShiftAltCap-Lecture.qmd
-      #     - href: Week13.qmd  
+          - href: Week13-Thoughts_FutureDirections.qmd  
       #     - href: Week14-FinalProject_Gallery.qmd          
       # - text: "Python Primer"  
       #   menu: 
